tests/src/errors/infinite_recursion/infinite_recursion.rustemo
A: B Ta;
B: B;

terminals
Ta: 'a';
